--- a/main.css
+++ b/main.css
@@ -246,14 +246,46 @@ body {
 }
 
 .landing-screen .hover-right-brain-overlay svg .cls-1 {
-  opacity: 0.1;
-  fill: #000;
+  opacity: 0;
+  fill: #fff;
   stroke: #fff;
+  animation: blinking 3s infinite;
 }
 
 .landing-screen .hover-right-brain-overlay svg .cls-1:hover {
   fill: #fff;
   opacity: 0.2;
+  -webkit-animation-name: none;
+}
+
+@keyframes blinking {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.2
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.landing-screen .hover-left-brain {
+  display: none;
+}
+
+.landing-screen .hover-left-brain svg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 70vw;
+  z-index: 5;
+}
+
+.landing-screen .hover-left-brain.active {
+  display: block;
 }
 
 .landing-screen .hover-left-brain-overlay svg {
@@ -268,14 +300,16 @@ body {
 }
 
 .landing-screen .hover-left-brain-overlay svg .cls-1 {
-  opacity: 0.1;
-  fill: #000;
+  opacity: 0;
+  fill: #fff;
   stroke: #fff;
+  animation: blinking 3s infinite;
 }
 
 .landing-screen .hover-left-brain-overlay svg .cls-1:hover {
   fill: #fff;
   opacity: 0.2;
+  -webkit-animation-name: none;
 }
 
 .landing-screen .landing-title #title {
@@ -469,6 +503,12 @@ body {
 }
 
 .right-brain-stuff.active {
+  background-color: #000000;
+  width: 100%;
+  height: 200vh;
+}
+
+.left-brain-stuff.active {
   background-color: #000000;
   width: 100%;
   height: 200vh;
