--- a/main.sass
+++ b/main.sass
@@ -575,7 +575,8 @@ body
         position: absolute
         top: 0
         left: 0
-        overflow: scroll
+        overflow-y: scroll
+        overflow-x: hidden
 
         .photographer-content-wrapper
             display: flex
@@ -608,7 +609,8 @@ body
         position: absolute
         top: 0
         left: 0
-        overflow: scroll
+        overflow-y: scroll
+        overflow-x: hidden
 
         .designer-content-wrapper
             display: flex
