--- a/main.sass
+++ b/main.sass
@@ -189,13 +189,13 @@ body
                     r: 3px
 
             .titles
-                font-size: 30px
-                line-height: 30px
+                font-size: 35px
+                line-height: 35px
 
             .about
-                font-size: 10px
+                font-size: 12px
                 font-family: karbonR
-                line-height: 14px
+                line-height: 18px
                 letter-spacing: 0.4px
                 margin: 4vh 0 0 0
 
@@ -223,7 +223,7 @@ body
                                     opacity: 1
 
             .contact
-                width: 75px
+                width: 100px
                 display: inline-block
                 border-radius: 75px
                 text-align: center
@@ -301,7 +301,7 @@ body
 
                     .socials-title
                         font-family: karbonR
-                        font-size: 15px
+                        font-size: 13px
                         letter-spacing: 0.5px
                         z-index: 100
                         opacity: 0.75
@@ -625,16 +625,19 @@ body
                         opacity: 1
 
         #linkedin
-            top: 38%
+            top: 34%
 
         #github
-            top: 46%
+            top: 42%
 
-        #medium
-            top: 54%
+        #resume
+            top: 50%
 
         #facebook
-            top: 62%
+            top: 58%
+
+        #medium
+            top: 66%
 
     .nav-bar-designs
         overflow: hidden
