fix inner cursor color for toggling screen mode

--- a/main.sass
+++ b/main.sass
@@ -845,7 +845,7 @@ body
         border-color: #9FBBC9
 
     .inner-cursor
-        background: #EAD8BF
+        background: (#EAD8BF)
 
     .left-arrow-cursor
         #left-arrow-icon
@@ -908,7 +908,7 @@ body
         border-color: #9FBBC9
 
     .inner-cursor
-        background: #F3F3F3
+        background: (#F3F3F3)
 
     .left-arrow-cursor
         #left-arrow-icon
