deleted all comments for previous designs

--- a/main.sass
+++ b/main.sass
@@ -584,17 +584,6 @@ body
             margin-left: 4vw
             width: 210px
 
-        //.tab-list
-            //list-style-type: none
-
-            //.tab
-                //margin: 5px 0 5px 0
-
-            //.tab.active
-                //font-size: 20px
-                //color: #505050
-                //margin: 10px 0 10px 25px
-
     .nav-bar-socials
         overflow: hidden
         
@@ -770,7 +759,6 @@ body
         .photographer-content-wrapper
             display: flex
             flex-flow: row wrap
-            //justify-content: space-evenly
             margin: 6% 6%
             justify-content: center
 
@@ -804,7 +792,6 @@ body
         .designer-content-wrapper
             display: flex
             flex-flow: row wrap
-            //justify-content: space-evenly
             margin: 6% 6%
             justify-content: center
 
@@ -845,7 +832,7 @@ body
         border-color: #9FBBC9
 
     .inner-cursor
-        background: (#EAD8BF)
+        background: #EAD8BF
 
     .left-arrow-cursor
         #left-arrow-icon
@@ -877,12 +864,6 @@ body
 
     .nav-bar-side
         color: #505050
-        //.tab-list
-            //.tab
-                //color: #989898
-
-            //.tab.active
-                //color: #505050
 
     .nav-bar-socials
         .socials-title
@@ -908,7 +889,7 @@ body
         border-color: #9FBBC9
 
     .inner-cursor
-        background: (#F3F3F3)
+        background: #F3F3F3
 
     .left-arrow-cursor
         #left-arrow-icon
@@ -940,12 +921,6 @@ body
 
     .nav-bar-side
         color: #F3F3F3
-        //.tab-list
-            //.tab
-                //color: #d1d1d1be
-
-            //.tab.active
-                //color: #F3F3F3
     
     .matt-screen
         .click-tag-wrapper
@@ -964,89 +939,3 @@ body
     .contact-tag-wrapper
         #contact-tag
             color: #F3F3F3
-
-
-/*.contact-screen
-    z-index: 500
-    display: block
-
-    .contact-content-wrapper
-        z-index: 500
-        position: absolute
-        top: 50%
-        left: 50%
-        transform: translate(-50%, -50%)
-        width: 20vw
-        height: 25vw
-        min-width: 263px
-        min-height: 335px
-        
-        form
-            z-index: 500
-            border: 1px solid #000
-            border-radius: 25px
-            padding: 5vh 3vh 5vh 3vh
-            background-color: #f0f0f0
-
-            h3
-                font-family: karbonR
-                font-size: 16px
-                margin-bottom: 5px
-                letter-spacing: 1px
-
-            input
-                border-radius: 5px
-                border: 1px solid #000
-                font-family: karbonR
-                padding: 10px 5px 5px 5px
-                background: #f0f0f0
-
-            .name
-                width: 100%
-                display: flex
-
-                .first-name
-                    width: 45%
-                    margin: 5% 10% 0 0
-
-                    input
-                        width: 100%
-                        height: 35px
-
-                .last-name
-                    width: 45%
-                    margin-top: 5%
-
-                    input
-                        width: 100%
-                        height: 35px
-
-            .email
-                width: 100%
-                margin-top: 5%
-
-                input
-                    width: 100%
-                    height: 35px
-
-            .message
-                width: 100%
-                margin-top: 5%
-
-                textarea
-                    width: 100%
-                    height: 25%
-                    padding: 5px
-                    border-radius: 5px
-                    border: 1px solid #000
-                    font-family: karbonR
-                    background: #f0f0f0
-
-            #submit-button
-                margin-top: 5%
-                width: 100%
-                font-family: karbonR
-                border-color: #3898EC
-                background-color: #3898EC
-                color: #f0f0f0
-                letter-spacing: 1px*/
