--- a/main.sass
+++ b/main.sass
@@ -30,6 +30,7 @@ $laptop-large: 2569px
 @media only screen and ( max-width: $tablet )
     .mobile-screen
         display: block
+        cursor: default !important
 
     .regular-screen
         display: none
@@ -110,7 +111,6 @@ body
             display: flex
             a
                 text-decoration: none
-                cursor: none
                 padding: 4vh 25px 0 0
 
                 .socials-title
@@ -296,7 +296,7 @@ body
                 display: flex
                 a
                     text-decoration: none
-                    cursor: none
+                    cursor: pointer
                     padding: 4vh 25px 0 0
 
                     .socials-title
